# justdavis

./: .editorconfig  .gitignore  .worktreeinclude  CONTRIBUTING.md  LICENSE  README.md  mise.toml  renovate.json
github-analytics/: .gitignore  CONTRIBUTING.md  README.md  config.smoke.sample.yaml  config.smoke.yaml  config.yaml  mise.toml  pyproject.toml  sample.env
github-analytics/github_analytics/: __main__.py  _http_utils.py  config.py  fetcher.py  reporter.py  writer.py
github-analytics/samples/: config.yaml  github-analytics.yml
github-analytics/tests/: conftest.py  recording_tests.py  test_config.py  test_e2e.py  test_fetcher.py  test_http_utils.py  test_placeholder.py  test_reporter.py  test_writer.py
github-analytics/tests/cassettes/: test_collect_creates_ndjson_files.yaml  test_collect_is_idempotent.yaml  test_fetch_code_frequency_returns_records.yaml  test_fetch_commit_activity_returns_records.yaml  test_fetch_contributors_returns_records.yaml  test_fetch_forks_returns_records.yaml  test_fetch_metadata_returns_record.yaml  test_fetch_participation_returns_records.yaml  test_fetch_punch_card_returns_records.yaml  test_fetch_releases_returns_records.yaml  test_fetch_stars_returns_records.yaml  test_fetch_traffic_clones_returns_records.yaml  test_fetch_traffic_paths_returns_records.yaml  test_fetch_traffic_referrers_returns_records.yaml  test_fetch_traffic_views_returns_records.yaml  test_fetch_workflow_runs_returns_records.yaml  test_load_repos_org_wildcard.yaml  test_load_repos_user_wildcard.yaml
github-analytics/tests/fixtures/: config_single_repo.yaml
(+54 files in other folders)
