[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-analytics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "vl-convert-python>=1.7",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-recording>=0.13",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
